--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "hl",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "firebase": "^9.9.3",
+    "json-server": "^0.17.0",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
